@@ -1,1 +1,1 @@
-init_segtype
+init_multiple_segtypes
