@@ -1,9 +1,11 @@
 Version 2.02.89 - 
 ==================================
+  Add configure --with-thin for (unimplemented) segtypes "thin" and "thin_pool".
+  Fix raid shared lib segtype registration (2.02.87).
 
 Version 2.02.88 - 19th August 2011
 ==================================
-  Remove incorrect 'Breaking' error message from allocation code (2.02.87).
+  Remove incorrect 'Breaking' error message from allocation code. (2.02.87)
   Add lvconvert --merge support for raid1 devices split with --trackchanges.
   Support lvconvert of -m1 raid1 devices to a higher number.
   Add --trackchanges support to lvconvert --splitmirrors option for raid1.
